[gd_scene load_steps=10 format=3 uid="uid://sryd043ysm2c"]

[ext_resource type="Script" path="res://UI/GameMenu/GameMenu.gd" id="1_x4jee"]
[ext_resource type="Theme" uid="uid://b7hm4jkruajuu" path="res://UI/Themes/LeftCornerButton.tres" id="2_dfmg4"]
[ext_resource type="AudioStream" uid="uid://eomw8em1sogd" path="res://Sounds/button.mp3" id="2_kr8fs"]
[ext_resource type="PackedScene" uid="uid://2631s4fm5yvb" path="res://UI/GameMenu/VerifyMenu.tscn" id="2_qp82h"]
[ext_resource type="Theme" uid="uid://80hoaimwssja" path="res://UI/Themes/RightCornerButton.tres" id="2_rm21i"]
[ext_resource type="Texture2D" uid="uid://6jg3dywoqtid" path="res://UI/Icons/check.svg" id="5_qnlat"]
[ext_resource type="Texture2D" uid="uid://c50uu6wy88ik2" path="res://UI/Icons/back.svg" id="6_uynit"]
[ext_resource type="PackedScene" uid="uid://b0prtrrugu6fr" path="res://UI/MainMenu/SlidingPanel.tscn" id="9_g141x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07sjw"]
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="GameMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.364706, 0.364706, 1)
script = ExtResource("1_x4jee")

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kr8fs")
volume_db = 20.0
bus = &"SFX"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 1161.0
offset_right = 119.0
offset_bottom = 1281.0
theme = ExtResource("2_dfmg4")

[node name="TextureRect2" type="TextureRect" parent="BackButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 19.0001
offset_right = 50.0
offset_bottom = 59.0001
scale = Vector2(3.6, 3.6)
texture = ExtResource("6_uynit")
stretch_mode = 2

[node name="ValidateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 1161.0
offset_right = 721.0
offset_bottom = 1281.0
theme = ExtResource("2_rm21i")

[node name="TextureRect" type="TextureRect" parent="ValidateButton"]
layout_mode = 0
offset_left = 16.0
offset_top = 21.0
offset_right = 40.0
offset_bottom = 45.0
scale = Vector2(3.6, 3.6)
texture = ExtResource("5_qnlat")
stretch_mode = 2

[node name="VerifyPanel" parent="." instance=ExtResource("2_qp82h")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 720.0
offset_bottom = 1280.0

[node name="SlidingPanel" parent="." instance=ExtResource("9_g141x")]
layout_mode = 0
offset_top = -500.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_07sjw")
direction = Vector2(0, 1)
speed = 12
buttonPos = Vector2(300, 500)
buttonRotation = 3.14

[node name="Label" type="Label" parent="SlidingPanel"]
layout_mode = 0
offset_left = 107.0
offset_top = 17.0
offset_right = 625.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="DescriptionText" type="RichTextLabel" parent="SlidingPanel"]
layout_mode = 0
offset_left = 55.0
offset_top = 106.0
offset_right = 313.0
offset_bottom = 364.0
scale = Vector2(1.25, 1.25)
theme_override_font_sizes/normal_font_size = 20
scroll_active = false

[node name="Table" type="TextureRect" parent="SlidingPanel"]
layout_mode = 2
offset_left = 392.0
offset_top = 99.0
offset_right = 692.0
offset_bottom = 449.0
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="NodePanel" parent="." instance=ExtResource("9_g141x")]
layout_mode = 0
offset_left = 2.0
offset_top = 1284.0
offset_right = 722.0
offset_bottom = 1404.0
targetPos = Vector2(0, 1150)

[node name="Scroll" type="ScrollContainer" parent="NodePanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 710.0
offset_bottom = 137.0
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NodePanel/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 120

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ValidateButton" to="." method="_on_button_pressed"]
